@@ -1188,9 +1188,7 @@ public class CommandParametersAdapter {
     public static List<Map.Entry<String, String>> appendToExtraQueryParametersIfWebAuthnCapable(
             @Nullable final List<Map.Entry<String, String>> queryStringParameters,
             @NonNull final PublicClientApplicationConfiguration configuration) {
-        //Putting behind passkey feature flag until feature is ready.
-        if (FidoConstants.IS_PASSKEY_SUPPORT_READY
-                && configuration.isWebauthnCapable()) {
+        if (configuration.isWebauthnCapable()) {
             final Map.Entry<String, String> webauthnExtraParameter = new AbstractMap.SimpleEntry<>(
                     FidoConstants.WEBAUTHN_QUERY_PARAMETER_FIELD,
                     FidoConstants.WEBAUTHN_QUERY_PARAMETER_VALUE);
