@@ -4,6 +4,7 @@ vNext
 ----------
 - [MINOR] Rename "is QR + PIN available" API to "get preferred auth method". (#2012)
 - [MINOR] Add support for CIAM custom domain (#2029)
+- [MINOR] Removing passkey feature flag (#2044)
 
 Version 5.1.0
 ----------
